# ai_coding_automated_setup_augmentode

./: .env.example  .gitignore  README.md  pyproject.toml  windsurf.md
docs/: checklist.md  logging.md  paths.md  plan.md  processing.md  tickets.md
examples/: config.example.yaml
logs/: .04f66ba672bee334cb47848db36807180bbfd796-audit.json
scripts/: venv_activate.sh  venv_create.sh
src/: __init__.py  cli.py
src/cli/: progress.py
src/combination/: __init__.py  engine.py  ids.py  trace.py
src/config/: __init__.py  loader.py  models.py  validation.py
src/evaluation/: judge.py  ranking.py  schemas.py
src/logging/: __init__.py  handlers.py  json_logger.py
src/paths/: __init__.py  manager.py  manifests.py
src/processing/: __init__.py  detection.py  images.py  io.py  mapping.py  normalize.py  pipeline.py  registry.py
src/processing/parsers/: __init__.py  (+5 more)
src/prompting/: __init__.py  generator.py  summarizer.py
src/providers/: interface.py  rate_limit.py  registry.py  retry.py
tests/: test_cli_help.py  test_env_isolation.py
tests/attempts/: test_runner_integration.py
tests/cli/: test_cli_exit_codes.py  test_commands.py  test_progress.py  test_progress_display.py
tests/combination/: test_engine.py  test_ids.py  test_trace.py
tests/config/: test_loader.py  test_loader_edges.py  test_weights.py
tests/evaluation/: test_judge.py  test_ranking.py
tests/logging/: test_cli_logging.py  test_correlation.py  test_handlers.py  test_json_logger.py
tests/paths/: test_attempt_paths.py  test_helpers.py  test_manager.py  test_manifests.py  test_run_manifest.py
tests/processing/: test_detection.py  test_detection_unknown.py  test_image_svg.py  test_mapping.py  test_normalize.py  test_office.py  test_pdf.py  test_registry.py  test_tabular.py  test_txt_md.py
tests/prompting/: test_prompts.py  test_summarizer.py
tests/providers/: test_anthropic.py  test_interface.py  test_openrouter.py  test_openrouter_negative.py  test_rate_limits.py  test_registry.py
(+3 files in other folders)
