[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-automated-setup"
version = "0.1.0"
description = "Automated LLM-Based Project Planning & Documentation Generation System"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mark" }]
dependencies = [
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
