[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coding-automated-setup"
version = "0.1.0"
description = "Automated LLM-Based Project Planning & Documentation Generation System"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mark" }]
dependencies = [
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "openpyxl>=3.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
